tests/macro-tests/cases/widget_new/when_missing_block.stderr
error: expected a when block expr and properties
 --> cases/widget_new/when_missing_block.rs:6:16
  |
6 |         when *#is_pressed
  |                ^^^^^^^^^^

warning: unused import: `gesture::is_pressed`
 --> cases/widget_new/when_missing_block.rs:1:16
  |
1 | use zng::{APP, gesture::is_pressed, widget::Wgt};
  |                ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
